--- a/css/main.css
+++ b/css/main.css
@@ -963,3 +963,27 @@ a.list-group-item:hover{
   top:25%;
   left:25%;
 }
+.icon_container{
+  width:128px;
+  height:128px;
+  display: inline-block;
+}
+i.icon1{
+  width:100%;
+  height:100%;
+	background: url(../images/about/client.png) no-repeat;
+	display: inline-block;
+}
+
+i.icon2{
+	width: 100%;
+	height: 100%;
+	background: url(../images/about/innovation.png) no-repeat;
+	display: inline-block;
+}
+i.icon3{
+	width: 100%;
+	height: 100%;
+	background: url(../images/about/credibility.png) no-repeat;
+	display: inline-block;
+}
