--- a/css/main.css
+++ b/css/main.css
@@ -971,19 +971,19 @@ a.list-group-item:hover{
 i.icon1{
   width:100%;
   height:100%;
-	background: url(../images/about/client.png) no-repeat;
+	background: url(../images/about/leader.png) no-repeat;
 	display: inline-block;
 }
 
 i.icon2{
 	width: 100%;
 	height: 100%;
-	background: url(../images/about/innovation.png) no-repeat;
+	background: url(../images/about/idea.png) no-repeat;
 	display: inline-block;
 }
 i.icon3{
 	width: 100%;
 	height: 100%;
-	background: url(../images/about/credibility.png) no-repeat;
+	background: url(../images/about/handshake.png) no-repeat;
 	display: inline-block;
 }
